# haskell-dicom

./: LICENSE  README.md  flake.nix  hs-dicom.cabal
src/Data/: Dicom.hs
test/data/: test.dcm
