cabal-version:      3.0
name:               hs-dicom
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Daniel Reimer
maintainer:         daniel.k.reimer97@gmail.com
-- copyright:
category:           Data
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Data.Dicom
    -- other-modules: bytest
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
                    , bytestring
                    , binary
                    , mtl
                    , transformers
    hs-source-dirs:   src
    default-language: Haskell2010
